--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Thesis/Examples/examplePendulum/trajectory.mat
 Thesis/Examples/vanDerPol/eigenTests.m
 Thesis/Examples/fragments/ignoreInput.m
+Thesis/Examples/example1/uncertain/infeasible.m
